# pytorch_vit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  development_notes.md  noxfile.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  index.md
pytorch_vit/: __init__.py
src/pytorch_vit/: __init__.py  multihead_self_attention.py  patch_embedder.py  patch_extractor.py  position_embedder.py  transformer_encoder.py  vision_transformer.py
tests/: test_multihead_self_attention.py  test_package.py  test_patch_embedder.py  test_patch_extractor.py  test_position_embedder.py  test_transformer_encoder.py  test_vision_transformer.py
